@@ -117,13 +117,6 @@ PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
          http://svn.apache.org/viewcvs?view=rev&rev=154319
        +1: stoddard, striker, wrowe (as corrected in subsequent patches)
 
-    *) backport 327008 PR 18757.   keep the proxied Content-Length 
-       header for a HEAD request.  recently received a private email
-       saying it also fixes a PHP HEAD request in 2.0.x.
-       http://svn.apache.org/viewcvs?rev=327008&view=rev
-       +1: gregames, trawick, niq
-
-
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ please place SVN revisions from trunk here, so it is easy to
     identify exactly what the proposed changes are!  Add all new
